client/development/styles/main.scss
@import "easings";

$page-padding: 60px;
$color-dark: #2f2f2f;
$color-medium: #808780;

html {
	background-color: white;
	font-family: Ingra, sans-serif;
	font-size: 17px;
	text-transform: lowercase;
	color: $color-medium;
	letter-spacing: 0.05em;
	font-weight: 300;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
}

body {
	margin: 0;
	padding: 0;
}

body * {
	box-sizing: border-box;
}

html.wf-loading {
	a,
	span,
	h1,
	h2,
	h3,
	h4,
	h5,
	p,
	li,
	button
	input {
		opacity: 0.05;
	}
}

h1,
h2,
h3,
h4,
h5 {
	color: $color-dark;
	font-weight: 400;
}

a[href] {
	color: inherit;
	text-decoration: none;
	
	&:hover {
		color: $color-dark;
	}
}

ul {
	list-style: square;
}

main {
	position: relative;
	transition: height 0ms $easeOutExpo, border-color 700ms $easeInOutExpo;
	overflow: hidden;
	border-bottom: 1px solid white;
	margin-top: 22px;
	margin-bottom: 20px;

	&:not(:empty) {
		border-color: rgba($color-medium, 0.5);
		transition-duration: 0ms, 50ms;
	}
		
	&.opening,
	&.closing {
		transition-duration: 700ms, 50ms;
		pointer-events: none;
	}
	
	&.opening {
		transition-timing-function: $easeInOutExpo, $easeInOutExpo;
		transition-duration: 700ms, 50ms;
	}
}

%close-button {
	position: absolute;
	display: block;
	top: 0px;
	width: 21px;
	height: 21px;
	margin-left: -$page-padding;
	width: $page-padding;
	text-align: center;
	font-family: "Lucida", "Lucida Grande", "Lucida Console", monospace;
	font-size: 1em;
	line-height: 21px;
	color: $color-medium;
	font-weight: 200;
	transition: opacity 250ms $easeOutExpo;
	
	main.closing &,
	main.opening & {
		opacity: 0;
	}
}

nav#site-logo {
	margin-left: $page-padding;
	line-height: 21px;
	margin-top: 98px;
	margin-bottom: 20px;
	
	h1 {
		font-size: 1em;
	}
}

nav#site-nav {
	margin-left: $page-padding;
	line-height: 21px;
	padding-bottom: 32px;
	
	ul {
		margin: 0;
		padding: 0;
		list-style: none;
	}
}

.about,
.contact {
	
	article {	
		padding: 0 $page-padding 12px $page-padding;
		max-width: 960px;
	}
	
	header {
		position: relative;
		margin-left: $page-padding;
		margin-bottom: 12px;
		
		a {
			@extend %close-button;
		}
		
		h2 {
			font-size: 1em;
			color: $color-dark;
			font-weight: 200;
			margin: 0;
		}
	}
}

.about {
	article {
		text-transform: none;
	}
}

article.a_series {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	
	header {
		position: relative;
		margin-left: $page-padding;
		margin-bottom: 12px;
		
		a {
			@extend %close-button;
		}
		
		h2 {
			font-size: 1em;
			color: $color-dark;
			font-weight: 200;
			margin: 0;
		}
	}
}

[data-hook=pieces-grid] {
	margin-top: 12px;
	padding-left: $page-padding;
	padding-right: $page-padding;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-around;
	align-items: center;
}

article.piece {
	h2,
	h3 {
		font-weight: 300;
		font-size: 13px;
		line-height: 19px;
		margin: 0;
	}
	
	h3 {
		color: $color-medium;
	}
	
	figure {
		margin: 0 0 21px 0;
		padding: 0;
		
		img {
			width: 100%;
			height: auto;
		}
	}
	
	&.thumbnail {
		width: 196px;
		padding: 0 36px;
		margin-bottom: 52px;
		box-sizing: content-box;
		
		figure {
			padding: 0;
			margin: 0 0 21px 0;
			max-height: 320px;
			overflow: hidden;
			background-color: rgba(yellow, 0.2);
			line-height: 0;
			display: flex;
			flex-direction: column;
			justify-content: center;
			align-items: center;
			
			img {
				flex: 0 0 auto;
			}
		}
		
		@media screen and (max-width: 480px) {
			width: 100%;
			padding: 0;
			
			figure {
				max-height: 320px;
			}
		}
	}

	&.expanded {
		
		figure {
			display: flex;
			flex-direction: row;
			flex-wrap: nowrap;
			justify-content: flex-start;
			padding-left: $page-padding;
			
			figcaption {
				flex: 0 0 auto;
				order: 0;	
				width: 196px;
				padding-right: 12px;
				font-size: 12px;
			}
			
			[data-hook=images] {
				display: flex;
				flex-direction: column;
				justify-content: center;
				align-items: center;
				order: 1;
				flex: 0 1 auto;
				
				img {
					max-width: 640px;
				}
			}
		}
	}	
}

